# ccwc

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml
include/: helper.hpp  myheader.hpp
src/: helper.cpp  main.cpp  myheader.cpp
tests/: catch.hpp  test_add.cpp
